[package]
name = "lunar_lander"
version = "0.1.0"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver="0.3.18"
lazy_static = "1.4.0"
serde = "1.0.99"
serde_json = "1.0.40"
rand = { version = "0.7.0", features = ["stdweb"] }
